# CP

./: 1005. Maximize Sum Of Array After K Negations .cpp  11-Container-With-Most-Water.cpp  1140-Stone-Game-II.cpp  1343-Number-of-Sub-arrays-of-Size-K-and-Average-Greater-than-or-Equal-to-Threshold.cpp  1405-Longest-Happy-String.cpp  145-Binary-Tree-Postorder-Traversal.cpp  1514-Path-with-Maximum-Probability.cpp  2099. Find Subsequence of Length K With the Largest Sum .cpp  2557 - The Drunk Jailer.cpp  2938-Separate-Black-and-White-Balls.cpp  3099-Harshad-Number.cpp  3163-String-Compression-III.cpp  322. Coin Change .cpp  34-Find-First-and-Last-Position-of-Element-in-Sorted-Array.cpp  570-Managers-with-at-Least-5-Direct-Reports.sql  739-Daily-Temperatures.cpp  947-Most-Stones-Removed-with-Same-Row-or-Column.cpp  983. Minimum Cost For Tickets .cpp  A. Alyona and Numbers.cpp  A. Anton and Danik.cpp  A. Anton and Letters.cpp  A. Anton and Polyhedrons.cpp  A. Arpa’s hard exam and Mehrdad’s naive cheat.cpp  A. Balanced Rating Changes.cpp  A. Bear and Big Brother.cpp  A. Beautiful Matrix.cpp  A. Black Square.cpp  A. BowWow and the Timetable.cpp  A. Boy or Girl.cpp  A. Brain's Photos.cpp  A. Buses Between Cities .cpp  A. Buy a Shovel.cpp  A. Calculating Function.cpp  A. Carrot Cakes.cpp  A. Chat room .cpp  A. Chewbaсca and Number.cpp  A. Colorful Stones (Simplified Edition).c  A. Colorful Stones (Simplified Edition).cpp  A. Counterexample V1.cpp  A. Counterexample V2.cpp  (+174 more)
DCP-10-24/: 1671-Minimum-Number-of-Removals-to-Make-Mountain-Array.cpp  2501-Longest-Square-Streak-in-an-Array.cpp  2684-Maximum-Number-of-Moves-in-a-Grid.cpp
